'GSM' is Greg Sabino Mullane, greg@turnstep.com)


Version thenext

  - Use proper formatting for warn() and croak() (CPAN bug #75642)
    [Niko Tyni]

  - Fix localized regex in test (CPAN bug #70759)

  - Better error message when trying to do things post-disconnect [GSM]

  - Switch from subversion to git. [GSM]

  - Fix error in async docs (CPAN bug #72812)

Version 2.18.1  Released May 9, 2011

  - Fix LANG testing issue [GSM] (CPAN bug #56705)

  - Fix bug when async commands issued immediately after a COPY. [GSM] (CPAN bug #68041)

Version 2.18.0  Released March 28, 2011 (subversion r14081)

  - Thanks to 123people.com for sponsoring work on this release [GSM]

  - New cancel() method per DBI spec. [Eric Simon] (CPAN bug #63516)

  - Fix memory leak when binding arrays [GSM] (CPAN bug #65734)

  - Fix memory leak with ParamValues. [Martin J. Evans] (CPAN bug #60863)

  - Fix memory leak in handle_old_async (missing PQclear)
    [Rainer Weikusat] (CPAN bug #63408)

  - Fix memory leak in pg_db_cancel (missing PQclear)
    [Rainer Weikusat] (CPAN bug #63441)

  - Mark pg_getcopydata strings as UTF8 as needed (CPAN bug #66006)

  - Function dequote_bytea returning void should not try to return something
    [Dagobert Michelsen] (CPAN bug #63497)

  - Fix the number of tests to skip in t/01connect.t when the $DBI_DSN
    environment variable lacks a database specification. [David E. Wheeler]

  - Fix algorithm for skipping tests in t/06bytea.t when running on a version
    of PostgreSQL lower than 9.0. [David E. Wheeler]

  - Small tweaks to get tests working when compiled against Postgres 7.4
    (CPAN bug #61713) [GSM]

  - Fix failing test when run as non-superuser [GSM] (CPAN bug #61534)


Version 2.17.2  Released November 21, 2010 (subversion r14542)

  - Support dequoting of hex bytea format for 9.0.
    [Dagfinn Ilmari Mannsåker] (CPAN bug #60200).
  - Don't PQclear on execute() if there is an active async query